--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.476.0",
+    "mongodb": "^7.0.0",
     "next-themes": "^0.4.6",
     "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
