--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,11 @@
 {
-  "short_name": "Creao",
-  "name": "Creao",
+  "short_name": "Verrocchio",
+  "name": "Verrocchio",
   "icons": [
     {
       "src": "favicon.ico",
       "type": "image/x-icon",
       "sizes": "256x256"
-    },
-    {
-      "src": "creao_icon.svg",
-      "type": "image/svg+xml",
-      "sizes": "192x192 512x512"
     }
   ],
   "start_url": ".",
